fix css classes and divs to be more readable

--- a/projectportfolio/static/css/about.css
+++ b/projectportfolio/static/css/about.css
@@ -8,13 +8,14 @@
 }
 
 .box {
-  position: absolute;
   border: 2px solid #54A2D1;
-  /* center aligns the boxes with absolute positioning */
+  /* center aligns the boxes with absolute positioning
+  position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
+  */
 }
 
 .img-pop { /* default: position absolute */
@@ -23,26 +24,26 @@
   right: -20px;
 }
 
-.htext.peach-red h1 {
+.title {
   font-size: 54px;
   margin: 0px;
   line-height: 54px;
 }
 
-.htext.peach-red h3 {
+.subtitle {
   font-size: 24px;
 }
-.ptext-container {
+.p-container {
 }
 
-.ptext.peach-red p {
+.ptext.peach-red.p {
   font-size: 18px;
 }
 
 .col-sm.explore {
   padding: 10px;
-  width: 30%;
-  height: 30%;
+  width: 33.3333%;
+  height: 33.3333%;
 }
 
 .shown.circle {
@@ -50,28 +51,7 @@
   height: 100px;
   margin: 0 auto;
 }
-.shown.circle {
-  position: relative;
-}
 
-.hidden.circle {
-  width: 100px;
-  height: 100px;
-  background: black;
-  position: absolute;
-  top: 50px;
-  left: 50px;
-}
-
-.shown.circle:hover > .hidden.circle {
-  transition: .9s;
-  width: 1000px;
-  height: 1000px;
-  top: -500px;
-  left:-500px;
-  z-index: 0;
-  opacity: 0%;
-}
 
 
 
